--- a/roles/void/tasks/directories.yml
+++ b/roles/void/tasks/directories.yml
@@ -15,4 +15,5 @@
       - ".config/i3"
       - ".config/picom"
       - ".config/rofi"
-      - ".config/quiterss"
+      - "git"
+      - ".config/QuiteRss"
