--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -22,6 +22,7 @@
       - base-devel
       - pacman-contrib
       - intel-ucode
+      - virtualbox-guest-utils
 
       # Terminal/Shell
       - zsh
