--- a/local.yml
+++ b/local.yml
@@ -30,7 +30,7 @@
 
 - hosts: localhost
   connection: local
-  tags: fedora,debian,lubuntu,void
+  tags: fedora,debian,lubuntu,void,arch
   become: true
   roles:
     - role: fedora
@@ -43,3 +43,5 @@
       when: ansible_distribution == "Void"
     - role: ubuntu
       when: ansible_distribution == "Ubuntu"
+    - role: arch
+      when: ansible_distribution == "Arch"
