--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -64,12 +64,12 @@
       - cifs-utils
       - pipewire
       - pulseaudio
-      - onedrive
+      # - onedrive
       - gnupg
 
       # Appearance
       - lxappearance
-      - arc-theme
+      # - arc-theme
       - arc-icon-theme
 
 
