--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -1,5 +1,5 @@
 - block:
-  # - include_tasks: users.yml
+  - include_tasks: users.yml
   - include_tasks: packages.yml
   - include_tasks: lightdm.yml
   - include_tasks: directories.yml
