--- a/roles/arch/tasks/directories.yml
+++ b/roles/arch/tasks/directories.yml
@@ -15,5 +15,6 @@
       - ".config/rofi"
       - "git"
       - ".config/QuiteRss"
-      - ".ansible"
+      - ".ansible/tmp"
+      - ".cache/dconf"
 
