--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -6,7 +6,7 @@
   - include_tasks: i3config.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
-  - include_tasks: ../lubuntu/tasks/tilix_config.yml
+  # - include_tasks: ../lubuntu/tasks/tilix_config.yml
   - include_tasks: ../debian/tasks/samba.yml
   - include_tasks: ../base/tasks/fonts.yml
   - include_tasks: git.yml
