--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -7,7 +7,7 @@
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
   # - include_tasks: ../lubuntu/tasks/tilix_config.yml
-  - include_tasks: ../debian/tasks/samba.yml
+  - include_tasks: samba.yml
   - include_tasks: ../base/tasks/fonts.yml
   - include_tasks: git.yml
   - include_tasks: system.yml
