--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -1,3 +1,10 @@
+- name: create safe git directory
+  tags: git
+  shell:
+    cmd: git config --global --add safe.directory /home/{{ user }}/git
+  args:
+    executable: /bin/bash
+
 - name: download polybar scripts
   tags: polybar
   git:
