--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -21,6 +21,7 @@
     dest: /home/{{ user }}/.config/i3blocks
     clone: yes
     update: yes
+    force: true
 
 - name: download yay
   tags: yay
