--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -2,7 +2,7 @@
   # - include_tasks: users.yml
   # - include_tasks: packages.yml
   # - include_tasks: lightdm.yml
-  # - include_tasks: directories.yml
+  - include_tasks: directories.yml
   # - include_tasks: i3config.yml
   # - include_tasks: ../debian/tasks/oh-my-posh.yml
   # - include_tasks: ../debian/tasks/zsh-alias.yml
