arch fixes - yay

--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -61,6 +61,7 @@
 #     executable: /bin/bash
 
 - name: build and install yay
+  become_user: "{{ user }}"
   command:
     chdir: /home/{{ user }}/git/yay
     cmd: "makepkg -sfi --noconfirm"
