--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -1,5 +1,5 @@
 - block:
-  # - include_tasks: users.yml
+  - include_tasks: users.yml
   # - include_tasks: packages.yml
   # - include_tasks: lightdm.yml
   # - include_tasks: directories.yml
@@ -8,8 +8,8 @@
   # - include_tasks: ../debian/tasks/zsh-alias.yml
   # - include_tasks: samba.yml
   # - include_tasks: ../base/tasks/fonts.yml
-  - include_tasks: git.yml
-  - include_tasks: system.yml
+  # - include_tasks: git.yml
+  # - include_tasks: system.yml
 
    # - include_tasks: ../lubuntu/tasks/tilix_config.yml
  # - include_tasks: theme-config.yml
