--- a/roles/arch/tasks/users.yml
+++ b/roles/arch/tasks/users.yml
@@ -10,7 +10,7 @@
     append: yes
     shell: /bin/bash
     create_home: true
-    password: "{{ user_pass }}"
+    # password: "{{ user_pass }}"
     ssh_key_file: "/home/{{ user }}/.ssh/id_ed25519"
     ssh_key_comment: "arch linux"
     ssh_key_type: ed25519
