--- a/roles/arch/tasks/i3config.yml
+++ b/roles/arch/tasks/i3config.yml
@@ -115,6 +115,32 @@
     path: /home/{{ user }}/script.sh
     mode: +x
 
+- name: back up poshtheme file
+  tags: poshtheme
+  copy:
+    src: /home/{{ user }}/.poshthemes/quick-term.omp.json
+    dest: /home/{{ user }}/.poshthemes/quick-term.omp.json.bak
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
+- name: install poshtheme config file
+  tags: poshtheme
+  copy:
+    src: files/quick-term.omp.json
+    dest: /home/{{ user }}/.poshthemes
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    backup: yes
+
+- name: install i3blocks config file
+  tags: i3blocks,i3
+  copy:
+    src: files/config-i3blocks
+    dest: /home/{{ user }}/.config/i3blocks/config
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    backup: yes
+
 
 # - name: xdg-user-dirs
 #   tags: xdg
