--- a/roles/arch/files/config
+++ b/roles/arch/files/config
@@ -191,6 +191,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+exec picom
+exec nitrogen --restore
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
