--- a/roles/arch/files/config
+++ b/roles/arch/files/config
@@ -199,7 +199,7 @@ exec nitrogen --restore
 # finds out, if available)
 bar {
 #        status_command i3status
-        status_command SCRIPT_DIR=~/.config/i3blocks i3blocks
+        status_command SCRIPT_DIR=~/.config/i3blocks/scripts i3blocks
 	font pango:DejaVu Sans Mono 10
 }
 
