--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -44,13 +44,13 @@
     update: yes
     # force: true
 
-- name: download yay
-  tags: yay
-  git:
-    repo: https://aur.archlinux.org/yay.git
-    dest: /home/{{ user }}/git/yay
-    clone: yes
-    update: yes
+# - name: download yay
+#   tags: yay
+#   git:
+#     repo: https://aur.archlinux.org/yay.git
+#     dest: /home/{{ user }}/git/yay
+#     clone: yes
+#     update: yes
 
 - name: change folder permissions
   tags: i3blocks
