--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -11,6 +11,7 @@
       - i3-wm
       - i3status
       - i3blocks
+      - i3lock
       - picom
       - polybar
 
@@ -24,6 +25,7 @@
       - intel-ucode
       - virtualbox-guest-utils
       - go
+      - sysstat
 
       # Terminal/Shell
       - zsh
@@ -32,6 +34,9 @@
       - tilix
       - ttf-nerd-fonts-symbols-2048-em
       - awesome-terminal-fonts
+      - ttf-dejavu
+      - otf-font-awesome
+      - ttf-font-awesome
 
       # Utilities
       - htop
@@ -51,6 +56,7 @@
       - code
       - caja
       - vim
+      - discord
 
       # Services
       - xdg-utils
@@ -63,8 +69,11 @@
       - samba
       - smbclient
       - cifs-utils
-      - pipewire
+      # - pipewire
       - pulseaudio
+      - pulseaudio-alsa
+      - pavucontrol
+      - alsa-utils
       # - onedrive
       - gnupg
 
