--- a/roles/arch/files/config
+++ b/roles/arch/files/config
@@ -255,7 +255,7 @@ mode "$mode_system" {
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl shutdown, mode "default"  
+    bindsym Shift+s exec --no-startup-id shutdown -h now, mode "default"  
     # bindsym s exec --no-startup-id $shutdown, mode "default"  
 
     # back to normal: Enter or Escape
