--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -11,4 +11,4 @@
   - include_tasks: tasks/onedrivegui.yml
   - include_tasks: tasks/moderndeck.yml
   - include_tasks: tasks/sshd.yml
-  - include_tasks: tasks/nanorc.yml
+  - include_tasks: tasks/nano.yml
