--- a/roles/arch/files/config
+++ b/roles/arch/files/config
@@ -245,6 +245,10 @@ bar {
 default_border pixel 0
 hide_edge_borders smart
 
+smart_gaps on
+gaps inner 5
+gaps outer 5
+
 set $Locker i3lock && sleep 1
 set $shutdown shutdown
 
