--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -26,6 +26,20 @@
   args:
     executable: /bin/bash
 
+- name: create git config info - 1
+  tags: git
+  shell:
+    cmd: git config --global user.email "abyss616@yahoo.com"
+  args:
+    executable: /bin/bash
+
+- name: create git config info - 1
+  tags: git
+  shell:
+    cmd: git config --global user.name "Matt Horne"
+  args:
+    executable: /bin/bash
+
 - name: download polybar scripts
   tags: polybar
   git:
