--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -11,6 +11,7 @@
   - include_tasks: ../base/tasks/fonts.yml
   - include_tasks: git.yml
   - include_tasks: system.yml
+  - include_tasks: ../void/tasks/onedrive.yml
 
    # - include_tasks: ../lubuntu/tasks/tilix_config.yml
  # - include_tasks: theme-config.yml
