--- a/roles/arch/tasks/users.yml
+++ b/roles/arch/tasks/users.yml
@@ -11,7 +11,8 @@
     shell: /bin/bash
     create_home: true
     # password: "{{ user_pass }}"
-    ssh_key_file: "/home/{{ user }}/.ssh/id_ed25519"
+    generate_ssh_key: yes
+    ssh_key_file: /home/{{ user }}/.ssh/id_ed25519
     ssh_key_comment: "arch linux"
     ssh_key_type: ed25519
 
