--- a/roles/arch/tasks/i3config.yml
+++ b/roles/arch/tasks/i3config.yml
@@ -130,6 +130,12 @@
     path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
     mode: +x
 
+- name: edit pacman-updates script
+  lineinfile:
+    dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman
+    state: present
+    regexp: '^echo "# $updates'
+    line: 'echo "$updates'
 
 # - name: xdg-user-dirs
 #   tags: xdg
