--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -58,6 +58,26 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
+- name: change pacman-updates script to executable
+  tags: polybar,pacman
+  file:
+    path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
+    mode: +x
+
+- name: edit pacman-updates script
+  lineinfile:
+    dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman
+    state: present
+    regexp: '^echo "# $updates'
+    line: 'echo "$updates'
+
+
+- name: download yay
+  tags: yay
+  aur:
+    name: yay
+    state: present
+
 # - name: download i3blocks-contrib scripts
 #   tags: i3blocks
 #   git:
@@ -66,12 +86,6 @@
 #     clone: yes
 #     update: yes
     # force: true
-
-- name: download yay
-  tags: yay
-  aur:
-    name: yay
-    state: present
 
 # - name: change folder permissions
 #   tags: i3blocks
