--- a/roles/arch/tasks/i3config.yml
+++ b/roles/arch/tasks/i3config.yml
@@ -115,27 +115,14 @@
     path: /home/{{ user }}/script.sh
     mode: +x
 
-- name: install i3blocks config file
-  tags: i3blocks,i3
-  copy:
-    src: files/config-i3blocks
-    dest: /home/{{ user }}/.config/i3blocks/config
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    backup: yes
-
-- name: change pacman-updates script to executable
-  tags: polybar,pacman
-  file:
-    path: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
-    mode: +x
-
-- name: edit pacman-updates script
-  lineinfile:
-    dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman
-    state: present
-    regexp: '^echo "# $updates'
-    line: 'echo "$updates'
+# - name: install i3blocks config file
+#   tags: i3blocks,i3
+#   copy:
+#     src: files/config-i3blocks
+#     dest: /home/{{ user }}/.config/i3blocks/config
+#     owner: "{{ user }}"
+#     group: "{{ user }}"
+#     backup: yes
 
 # - name: xdg-user-dirs
 #   tags: xdg
