--- a/roles/arch/files/config
+++ b/roles/arch/files/config
@@ -232,7 +232,7 @@ workspace_auto_back_and_forth yes
 
 exec picom
 exec nitrogen --restore
-
+exec --no-startup-id VBoxClient --clipboard
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
