--- a/roles/arch/tasks/users.yml
+++ b/roles/arch/tasks/users.yml
@@ -1,3 +1,5 @@
+---
+
 - name: add user group
   group:
     name: "{{ user }}"
@@ -7,11 +9,11 @@
   user:
     name: "{{ user }}"
     groups: wheel,{{ user }}
-    append: yes
+    append: true
     shell: /bin/bash
     create_home: true
-    password: "{{ userpass }}"
-    generate_ssh_key: yes
+    password: "{{ userpass | password_hash }}"
+    generate_ssh_key: true
     ssh_key_file: /home/{{ user }}/.ssh/id_ed25519
     ssh_key_comment: "arch linux"
     ssh_key_type: ed25519
