--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,4 @@
 log_path = /var/log/ansible.log
 callbacks_enabled = timer, profile_tasks, profile_roles
 interpreter_python = auto_silent
+deprecation_warnings=False
