--- a/roles/arch/tasks/yay.yml
+++ b/roles/arch/tasks/yay.yml
@@ -1,6 +1,6 @@
 ---
 - name: Clone yay
-  become: "{{ user }}"
+  become_user: "{{ user }}"
   git:
     repo: https://aur.archlinux.org/yay-bin.git
     dest: /home/{{ user }}/git/yay"
