--- a/roles/arch/tasks/yay.yml
+++ b/roles/arch/tasks/yay.yml
@@ -7,6 +7,7 @@
     update: true
 
 - name: Build and install yay
+  become_user: "{{ user }}"
   command:
     chdir: /home/{{ user }}/git/yay
     cmd: "makepkg -sfi --noconfirm"
